--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -251,7 +251,7 @@
         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/ic_chat"
+            android:src="@drawable/ic_chat2"
             android:layout_gravity="center"
             />
             <TextView
@@ -289,7 +289,7 @@
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/ic_person"
+                    android:src="@drawable/ic_person2"
                     android:layout_gravity="center"
                     />
                 <TextView
@@ -328,7 +328,7 @@
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/ic_history"
+                    android:src="@drawable/ic_history2"
                     android:layout_gravity="center"
                     />
                 <TextView
@@ -365,7 +365,7 @@
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/ic_tutorial"
+                    android:src="@drawable/ic_instructions"
                     android:layout_gravity="center"
                     />
                 <TextView
