--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -54,8 +54,8 @@
                     android:layout_alignParentRight="true"
                     android:gravity="center"
                     android:scaleType="center"
-                    android:text="SPUS"
-                    android:textSize="25sp"
+                    android:text="Pembayaran Rutin"
+                    android:textSize="20sp"
                     android:background="@color/colorLightBlue8"
                     android:textColor="@color/white"/>
 
