--- a/app/src/main/res/layout/activity_daftar.xml
+++ b/app/src/main/res/layout/activity_daftar.xml
@@ -76,6 +76,25 @@
             android:padding="10dp"
             android:singleLine="true"
             android:textSize="16sp" />
+        <EditText
+            android:id="@+id/npsn"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@android:color/transparent"
+            android:drawableLeft="@drawable/ic_number"
+            android:drawablePadding="8dp"
+            android:gravity="center_vertical"
+            android:hint="NPSN"
+            android:inputType="phone"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textSize="16sp" />
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            android:background="@color/faint_white" />
 
         <View
             android:layout_width="fill_parent"
