--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -79,40 +79,40 @@
                 android:background="@color/white"
                 android:orientation="vertical">
 
-                <RelativeLayout
-                    android:id="@+id/layout_saved_cards"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:clickable="true"
-                    android:foreground="?android:attr/selectableItemBackground">
+<!--                <RelativeLayout-->
+<!--                    android:id="@+id/layout_saved_cards"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_margin="8dp"-->
+<!--                    android:clickable="true"-->
+<!--                    android:foreground="?android:attr/selectableItemBackground">-->
 
-                    <ImageView
-                        android:id="@+id/image_cards"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/ic_card" />
+<!--                    <ImageView-->
+<!--                        android:id="@+id/image_cards"-->
+<!--                        android:layout_width="25dp"-->
+<!--                        android:layout_height="25dp"-->
+<!--                        android:layout_centerVertical="true"-->
+<!--                        android:src="@drawable/ic_card" />-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_toEndOf="@id/image_cards"
-                        android:layout_toRightOf="@id/image_cards"
-                        android:text="Mycards"
-                        android:textSize="18sp" />
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_centerVertical="true"-->
+<!--                        android:layout_marginLeft="16dp"-->
+<!--                        android:layout_marginStart="16dp"-->
+<!--                        android:layout_toEndOf="@id/image_cards"-->
+<!--                        android:layout_toRightOf="@id/image_cards"-->
+<!--                        android:text="Mycards"-->
+<!--                        android:textSize="18sp" />-->
 
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/ic_arrow_right" />
-                </RelativeLayout>
+<!--                    <ImageView-->
+<!--                        android:layout_width="20dp"-->
+<!--                        android:layout_height="20dp"-->
+<!--                        android:layout_alignParentEnd="true"-->
+<!--                        android:layout_alignParentRight="true"-->
+<!--                        android:layout_centerVertical="true"-->
+<!--                        android:src="@drawable/ic_arrow_right" />-->
+<!--                </RelativeLayout>-->
 
                 <View
                     android:layout_width="match_parent"
