--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -212,132 +212,133 @@
         android:id="@+id/btn_pay"
         android:layout_width="350dp"
         android:layout_height="80dp"
-        android:background="@drawable/button_radius"
         android:layout_below="@+id/cv_header"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:background="@drawable/button_radius"
         android:text="Bayar"
-        android:textSize="20sp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:textSize="20sp" />
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/lyt_content"
+        android:layout_width="304dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/btn_pay"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="35dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:gravity="center">
 
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/btn_chat"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:elevation="4dp"
-        app:cardCornerRadius="15dp"
-        >
-        
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@drawable/button_radius2"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="10dp"
-            >
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/ic_chat2"
-            android:layout_gravity="center"
-            />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Chat"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                />
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
-            android:id="@+id/btn_account"
+            android:id="@+id/btn_chat"
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:elevation="4dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="10dp"
-            android:layout_alignParentEnd="true"
             app:cardCornerRadius="15dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:background="@drawable/button_radius2"
-                android:layout_gravity="center_vertical"
+                android:orientation="vertical"
                 android:paddingLeft="10dp"
                 android:paddingTop="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp">
+
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/ic_person2"
                     android:layout_gravity="center"
-                    />
+                    android:src="@drawable/ic_chat2" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Chat"
+                    android:textAlignment="center"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/btn_account"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_alignParentEnd="true"
+            android:elevation="4dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
+            app:cardCornerRadius="15dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/button_radius2"
+                android:orientation="vertical"
+                android:paddingLeft="10dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_person2" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Account"
                     android:textAlignment="center"
-                    android:textColor="@color/white"
-                    />
+                    android:textColor="@color/white" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
+
         <androidx.cardview.widget.CardView
             android:id="@+id/btn_histori"
             android:layout_width="130dp"
             android:layout_height="130dp"
+            android:layout_below="@id/btn_chat"
+            android:layout_marginTop="20dp"
             android:elevation="4dp"
             android:paddingLeft="10dp"
             android:paddingTop="10dp"
             android:paddingRight="10dp"
             android:paddingBottom="10dp"
-            android:layout_below="@id/btn_chat"
-            android:layout_marginTop="20dp"
             app:cardCornerRadius="15dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:background="@drawable/button_radius2"
+                android:orientation="vertical"
                 android:paddingLeft="10dp"
                 android:paddingTop="10dp"
                 android:paddingRight="10dp"
-                android:paddingBottom="10dp"
-                >
+                android:paddingBottom="10dp">
+
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/ic_history2"
                     android:layout_gravity="center"
-                    />
+                    android:src="@drawable/ic_history2" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Histori"
                     android:textAlignment="center"
-                    android:textColor="@color/white"
-                    />
+                    android:textColor="@color/white" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -346,35 +347,35 @@
             android:id="@+id/btn_tutorial"
             android:layout_width="130dp"
             android:layout_height="130dp"
-            android:elevation="4dp"
             android:layout_below="@id/btn_account"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="20dp"
+            android:elevation="4dp"
             app:cardCornerRadius="15dp">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:background="@drawable/button_radius2"
+                android:orientation="vertical"
                 android:paddingLeft="10dp"
                 android:paddingTop="10dp"
                 android:paddingRight="10dp"
                 android:paddingBottom="10dp">
+
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/ic_instructions"
                     android:layout_gravity="center"
-                    />
+                    android:src="@drawable/ic_instructions" />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Tutorial"
                     android:textAlignment="center"
-                    android:textColor="@color/white"
-                    />
+                    android:textColor="@color/white" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -384,4 +385,4 @@
 
 </RelativeLayout>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
