--- a/app/src/main/res/layout/activity_daftar.xml
+++ b/app/src/main/res/layout/activity_daftar.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.spusapp.DaftarActivity">
 
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/scroll1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="658dp"
         android:orientation="vertical"
-        android:padding="20dp" >
+        android:padding="20dp"
+        >
 
         <TextView
             android:layout_width="fill_parent"
@@ -76,6 +85,7 @@
             android:padding="10dp"
             android:singleLine="true"
             android:textSize="16sp" />
+
         <EditText
             android:id="@+id/npsn"
             android:layout_width="fill_parent"
@@ -146,6 +156,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="30dp"
             android:background="@android:color/transparent"
             android:drawableLeft="@drawable/ic_password_confirm"
             android:drawablePadding="8dp"
@@ -154,17 +165,16 @@
             android:inputType="textPassword"
             android:padding="10dp"
             android:singleLine="true"
-            android:textSize="16sp"
-            android:layout_marginBottom="30dp"/>
+            android:textSize="16sp" />
 
-<!--        <CheckBox-->
-<!--            android:id="@+id/terms_conditions"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="7dp"-->
-<!--            android:text="@string/terms_conditions"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:textSize="14sp" />-->
+        <!--        <CheckBox-->
+        <!--            android:id="@+id/terms_conditions"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="7dp"-->
+        <!--            android:text="@string/terms_conditions"-->
+        <!--            android:textColor="@color/white"-->
+        <!--            android:textSize="14sp" />-->
 
         <Button
             android:id="@+id/bt_daftar"
@@ -179,4 +189,5 @@
             android:textStyle="bold" />
 
     </LinearLayout>
-</RelativeLayout>
+    </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
