--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,97 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Login"
-    android:layout_marginTop="20dp"
     android:layout_marginLeft="20dp"
+    android:layout_marginTop="20dp"
     android:layout_marginRight="20dp"
-    android:layout_marginBottom="20dp">
+    android:layout_marginBottom="20dp"
+    tools:context=".Login">
 
     <ImageView
         android:id="@+id/iv_logo"
         android:layout_width="170dp"
         android:layout_height="170dp"
-        android:layout_marginTop="30dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_pus_app"/>
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ic_pus_app"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tv_logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/iv_logo"
+        android:layout_marginTop="24dp"
+        android:fontFamily="sans-serif-condensed-medium"
         android:text="PUS APP"
         android:textAlignment="center"
-        android:fontFamily="sans-serif-condensed-medium"
         android:textSize="30sp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
+        tools:layout_editor_absoluteX="0dp" />
+
     <TextView
         android:id="@+id/tv_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Silahkan Masukan Nomer Telepon Untuk Melanjutkan"
         android:layout_below="@id/tv_logo"
+        android:layout_marginTop="44dp"
+        android:fontFamily="sans-serif"
+        android:text="Silahkan Masukan Nomer Telepon Untuk Melanjutkan"
         android:textAlignment="center"
-        android:layout_marginTop="45dp"
         android:textSize="25sp"
-        android:fontFamily="sans-serif"/>
+        app:layout_constraintTop_toBottomOf="@+id/tv_logo"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <LinearLayout
+        android:id="@+id/ly_no"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="5dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_login"
+        >
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/_62"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
+
+        <EditText
+            android:id="@+id/et_nohp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_login"
+            android:hint="Nomer Telepon"
+            android:inputType="number"
+            android:paddingLeft="5sp"
+            android:textSize="25sp" />
+    </LinearLayout>
 
     <EditText
-        android:id="@+id/et_nohp"
+        android:id="@+id/et_password"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:hint="Password"
+        android:inputType="number"
+        android:paddingLeft="5sp"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ly_no"
+        android:textAlignment="center"
+        android:layout_marginTop="5dp"/>
+
+    <FrameLayout
+        android:id="@+id/fl_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_login"
-        android:inputType="number"
-        android:layout_marginLeft="25dp"
-        android:paddingLeft="5sp"
-        android:layout_marginRight="25dp"
-        android:textSize="25sp"
-        android:layout_marginTop="35dp"
-        android:hint="Nomer Telepon"
-        android:drawableStart="@drawable/ic_phone"/>
-
-    <Button
-        android:id="@+id/tv_lanjutkan"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Lanjutkan"
-        android:layout_below="@id/et_nohp"
-        android:background="@drawable/button_radius"
-        android:fontFamily="sans-serif"
+        android:layout_below="@id/ly_no"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp"
-        android:textSize="15dp"
-        android:textColor="#fff"
-        />
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/et_password"
+        >
+
+        <Button
+            android:id="@+id/tv_lanjutkan"
+            android:layout_width="200dp"
+            android:imeOptions="actionDone"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_radius"
+            android:fontFamily="sans-serif"
+            android:text="Lanjutkan"
+            android:textColor="#fff"
+            android:textSize="15dp"
+            android:layout_gravity="center_horizontal"/>
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+
+    </FrameLayout>
 
     <Button
         android:id="@+id/bt_daftar"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Daftar Sekolah"
-        android:layout_below="@+id/tv_lanjutkan"
-        android:background="@drawable/button_radius_green"
-        android:textColor="@color/white"
+        android:layout_below="@+id/fl_button"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        />
+        android:background="@drawable/button_radius_green"
+        android:text="Daftar Sekolah"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fl_button"
+        app:layout_constraintVertical_bias="0.081" />
 
 
-<!--    <Button-->
-<!--        android:id="@+id/tv_daftar"-->
-<!--        android:layout_width="200dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Daftar"-->
-<!--        android:layout_below="@id/tv_lanjutkan"-->
-<!--        android:background="@color/colorGreen"-->
-<!--        android:fontFamily="sans-serif"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_marginTop="25dp"-->
-<!--        android:textSize="15dp"-->
-<!--        android:textColor="#fff"-->
-<!--        />-->
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
