--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,142 +4,159 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="20dp"
-    android:layout_marginTop="20dp"
-    android:layout_marginRight="20dp"
-    android:layout_marginBottom="20dp"
     tools:context=".Login">
 
-    <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="170dp"
-        android:layout_height="170dp"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/ic_pus_app"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_logo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/iv_logo"
-        android:layout_marginTop="24dp"
-        android:fontFamily="sans-serif-condensed-medium"
-        android:text="PUS APP"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
-        tools:layout_editor_absoluteX="0dp" />
-
-    <TextView
-        android:id="@+id/tv_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_logo"
-        android:layout_marginTop="44dp"
-        android:fontFamily="sans-serif"
-        android:text="Silahkan Masukan Nomer Telepon Untuk Melanjutkan"
-        android:textAlignment="center"
-        android:textSize="25sp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_logo"
-        tools:layout_editor_absoluteX="0dp" />
-
     <LinearLayout
-        android:id="@+id/ly_no"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="5dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_login"
-        >
+        android:id="@+id/ll_1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/_62"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
-
-        <EditText
-            android:id="@+id/et_nohp"
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_login"
-            android:hint="Nomer Telepon"
-            android:inputType="number"
-            android:paddingLeft="5sp"
-            android:textSize="25sp" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_gradient"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/et_password"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:inputType="number"
-        android:paddingLeft="5sp"
-        android:textSize="25sp"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        android:background="@drawable/bg_ly"
+        android:orientation="vertical"
+        android:paddingStart="10dp"
+        android:paddingTop="20dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/ll_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ly_no"
-        android:textAlignment="center"
-        android:layout_marginTop="5dp"/>
+        app:layout_constraintTop_toTopOf="parent">
 
-    <FrameLayout
-        android:id="@+id/fl_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/ly_no"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/et_password"
-        >
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="monospace"
+            android:text="LOGIN"
+            android:textAlignment="center"
+            android:textColor="#039BE5"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nomer Telepon"
+            android:layout_marginTop="20dp"/>
+
+        <LinearLayout
+            android:id="@+id/ly_no"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/et_nohp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_phone"
+                android:hint="Nomer Telepon"
+                android:inputType="number"
+                android:paddingLeft="5sp"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Password" />
+
+        <EditText
+            android:id="@+id/et_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/ic_lock"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:paddingLeft="5sp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ly_no" />
 
         <Button
             android:id="@+id/tv_lanjutkan"
             android:layout_width="200dp"
-            android:imeOptions="actionDone"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
             android:background="@drawable/button_radius"
             android:fontFamily="sans-serif"
+            android:imeOptions="actionDone"
             android:text="Lanjutkan"
             android:textColor="#fff"
-            android:textSize="15dp"
-            android:layout_gravity="center_horizontal"/>
+            android:textSize="15dp" />
 
-        <ProgressBar
-            android:id="@+id/progressbar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:visibility="gone" />
+    </LinearLayout>
 
-    </FrameLayout>
-
-    <Button
-        android:id="@+id/bt_daftar"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/fl_button"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/button_radius_green"
-        android:text="Daftar Sekolah"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ImageView
+        android:id="@+id/iv_logo"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/logo_pusapp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fl_button"
-        app:layout_constraintVertical_bias="0.081" />
+        app:layout_constraintTop_toTopOf="parent"
+         />
+
+    <!--    <TextView-->
+    <!--        android:id="@+id/tv_login"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_below="@id/iv_logo"-->
+    <!--        android:layout_marginTop="35dp"-->
+    <!--        android:fontFamily="sans-serif"-->
+    <!--        android:text="Silahkan Masukan Nomer Telepon Untuk Melanjutkan"-->
+    <!--        android:textAlignment="center"-->
+    <!--        android:textSize="25sp"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/iv_logo"-->
+    <!--        tools:layout_editor_absoluteX="0dp" />-->
+
+    <!--    -->
+
+    <!--    <FrameLayout-->
+    <!--        android:id="@+id/fl_button"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_below="@id/ly_no"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:layout_marginTop="24dp"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/et_password"-->
+    <!--        >-->
+
+
+    <!--        <ProgressBar-->
+    <!--            android:id="@+id/progressbar"-->
+    <!--            android:layout_width="40dp"-->
+    <!--            android:layout_height="40dp"-->
+    <!--            android:layout_gravity="center"-->
+    <!--            android:visibility="gone" />-->
+
+    <!--    </FrameLayout>-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
