--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -75,10 +75,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/main_appbar"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:background="@drawable/box_blue1"
+            android:background="@drawable/bg_ly"
             android:paddingTop="10dp"
             android:paddingBottom="10dp">
 
@@ -87,7 +87,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/lyt_header"
                 android:paddingTop="10dp"
-                android:paddingBottom="10dp">
+                android:paddingBottom="10dp"
+                android:background="@drawable/bg_ly">
 
             <TextView
                 android:layout_width="match_parent"
@@ -208,17 +209,55 @@
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 <!--    </RelativeLayout>-->
-    <Button
+<!--    <ImageButton-->
+<!--        android:id="@+id/btn_pay"-->
+<!--        android:layout_width="320dp"-->
+<!--        android:layout_height="100dp"-->
+<!--        android:layout_below="@+id/cv_header"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:background="@drawable/button_radius"-->
+<!--        android:scaleType="centerInside"-->
+<!--        app:srcCompat="@drawable/bg_assets"-->
+<!--        android:text="@string/bayar"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:textSize="20sp" />-->
+
+    <androidx.cardview.widget.CardView
         android:id="@+id/btn_pay"
-        android:layout_width="350dp"
-        android:layout_height="80dp"
-        android:layout_below="@+id/cv_header"
+        android:layout_width="320dp"
+        android:layout_height="100dp"
+        android:elevation="4dp"
+        app:cardCornerRadius="15dp"
+        android:layout_below="@id/cv_header"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/button_radius"
-        android:text="Bayar"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:layout_marginTop="20dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorLightBlue10"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="BAYAR"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:layout_centerVertical="true"
+                android:textColor="@color/white"
+                android:textStyle="bold"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/bg_assets"
+                android:paddingRight="7dp"
+                android:id="@+id/bg_pay"
+                />
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <RelativeLayout
         android:id="@+id/lyt_content"
@@ -227,7 +266,7 @@
         android:layout_below="@+id/btn_pay"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="15dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:gravity="center">
