--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -44,6 +44,7 @@
                 </RelativeLayout>
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
+
         <RelativeLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
@@ -55,27 +56,100 @@
             android:gravity="center"
             android:layout_below="@id/main_appbar">
 
-            <Button
+            <androidx.cardview.widget.CardView
                 android:id="@+id/btn_rutin"
                 android:layout_width="match_parent"
-                android:layout_height="280dp"
-                android:background="@drawable/button_radius"
-                android:fontFamily="sans-serif"
-                android:text="Pembayaran Rutin"
-                android:textColor="#fff"
-                android:textSize="18sp"/>
-            <Button
+                android:layout_height="250dp"
+                android:elevation="4dp"
+                app:cardCornerRadius="15dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorLightBlue10"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="PEMBAYARAN RUTIN"
+                        android:textSize="20sp"
+                        android:textAlignment="center"
+                        android:layout_centerVertical="true"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"/>
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_rutin"
+                        android:id="@+id/bg_rutin"
+                        android:layout_centerVertical="true"
+                        />
+                </RelativeLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
                 android:id="@+id/btn_sekali"
                 android:layout_width="match_parent"
-                android:layout_height="280dp"
-                android:layout_below="@+id/btn_rutin"
-                android:text="Sekali Bayar"
-                android:layout_marginTop="15dp"
-                android:fontFamily="sans-serif"
-                android:textSize="18sp"
-                android:textColor="#fff"
-                android:background="@drawable/button_radius"
-                />
+                android:layout_height="250dp"
+                android:elevation="4dp"
+                app:cardCornerRadius="15dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/btn_rutin"
+                android:layout_centerVertical="true">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorLightBlue10"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="SEKALI BAYAR"
+                        android:textSize="20sp"
+                        android:textAlignment="center"
+                        android:layout_centerVertical="true"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        />
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_sekali"
+                        android:id="@+id/bg_sekali"
+                        android:layout_centerVertical="true"
+                        />
+                </RelativeLayout>
+
+            </androidx.cardview.widget.CardView>
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_rutin"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="280dp"-->
+<!--                android:background="@drawable/button_radius"-->
+<!--                android:fontFamily="sans-serif"-->
+<!--                android:text="Pembayaran Rutin"-->
+<!--                android:textColor="#fff"-->
+<!--                android:textSize="18sp"/>-->
+<!--            <Button-->
+<!--                android:id="@+id/btn_sekali"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="280dp"-->
+<!--                android:layout_below="@+id/btn_rutin"-->
+<!--                android:text="Sekali Bayar"-->
+<!--                android:layout_marginTop="15dp"-->
+<!--                android:fontFamily="sans-serif"-->
+<!--                android:textSize="18sp"-->
+<!--                android:textColor="#fff"-->
+<!--                android:background="@drawable/button_radius"-->
+<!--                />-->
         </RelativeLayout>
 
     </RelativeLayout>
