--- a/app/src/main/res/layout/activity_order_review.xml
+++ b/app/src/main/res/layout/activity_order_review.xml
@@ -70,7 +70,7 @@
                     android:id="@+id/product_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@drawable/promo" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
